# MHSPythonCourse

hw1/: pyproject.toml
hw1/artifacts/: session.txt
hw1/hw1/: nl.py  tail.py  wc.py
hw2/artifacts/: task1.tex  task2_PyPi_link.txt
hw2/test-latexxxgenerator/: Dockerfile  output.tex  pyproject.toml
hw2/test-latexxxgenerator/test_latexxxgenerator/: main.py
hw3/: pyproject.toml
hw3/examples/: task1.py  task2.py
hw3/hw3/: matrix.py  matrix_mixin.py
hw4/: pyproject.toml
hw4/artifacts/: task1.txt  task2.txt
hw4/hw4/: fib.py  integrate.py  task1.py  task2.py
