[tool.poetry]
name = "test-latexxxgenerator"
version = "0.1.0"
description = ""
authors = ["Aleksandr Tretyakov <aleksandr.tret.4@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
latexxxgenerator = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
